# buildsystems

./: .gitignore  TODOs
cmake/: .gitignore  Links.txt
cmake/basic/: CMakeLists.txt  hello.c
cmake/compiler/: CMakeLists.txt
cmake/compiler_bits/: CMakeLists.txt
cmake/config_file/: CMakeLists.txt  infile
cmake/config_file2/: CMakeLists.txt  config.h.in  source.c
cmake/cpplibexample/: CMakeLists.txt  main.cpp
cmake/cpplibexample/lib/: CMakeLists.txt  mylib.cpp  mylib.h
cmake/definition/: CMakeLists.txt  README.txt  def.c
cmake/efl/: CMakeLists.txt  main.c
cmake/efl_edje/: CMakeLists.txt
cmake/efl_edje2/: CMakeLists.txt  mytheme2.edc
cmake/enviroment/: CMakeLists.txt
cmake/gl_linux/: CMakeLists.txt  README.md  opengl.cpp
cmake/install/: CMakeLists.txt  myapp.c
cmake/libexample/: CMakeLists.txt  mylib.cpp  mylib.h  myprog.cpp
cmake/libexample2/: CMakeLists.txt  myprog.c
cmake/libexample2/mylib/: CMakeLists.txt  mylib.c
cmake/subdir/: CMakeLists.txt
cmake/subdir/src/: CMakeLists.txt  myprog.cpp
cmake/variable/: CMakeLists.txt  bye.c  hello.c
desktop_gl/: Project1.sln
desktop_gl/Common/: Common.vcxproj  Common.vcxproj.filters
desktop_gl/Debug/: glm.ilk
desktop_gl/ImageRotate/: ImageRotate.cpp
desktop_gl/ImageRotate/Debug/: vc110.idb
desktop_gl/ImageRotate/x64/Debug/: vc110.idb
desktop_gl/MVP/: MVP.cpp  MVP.vcxproj
desktop_gl/MVP/x64/Debug/: vc110.idb
desktop_gl/MVPEffect/: MVPEffect.cpp  MVPEffect.vcxproj  MVPEffect.vcxproj.filters
desktop_gl/MVPEffect/x64/Debug/: vc110.idb
desktop_gl/MVPEffectRect/: MVPEffectRect.vcxproj.filters
desktop_gl/MVPEffectRect/x64/Debug/: vc110.idb
desktop_gl/Project1/: Project1.vcxproj  PropertySheet.props  main.cpp
desktop_gl/Project1/Debug/: CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  cl.command.1.tlog
desktop_gl/Project1/x64/Debug/: vc110.idb
desktop_gl/Project2/: Project2.vcxproj  Source.cpp
desktop_gl/Project2/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog
desktop_gl/Project2/x64/Debug/: vc110.idb
desktop_gl/Rectangle/: Rectangle.vcxproj  Source.cpp
desktop_gl/Rectangle/x64/Debug/: vc110.idb
desktop_gl/Texture/: Texture.cpp  Texture.vcxproj
desktop_gl/Texture/x64/Debug/: vc110.idb
desktop_gl/Texture2/: Source.cpp  Texture2.vcxproj
desktop_gl/Texture2/x64/Debug/: vc110.idb
desktop_gl/glm/Debug/: vc110.idb
desktop_gl/image_texture/: ImageTexture.cpp  image_texture.vcxproj
desktop_gl/image_texture/x64/Debug/: vc110.idb
desktop_gl/rectangle_color/: Source.cpp
desktop_gl/rectangle_color/x64/Debug/: vc110.idb
desktop_gl/x64/Debug/: ImageRotate.ilk  MVP.ilk  MVPEffect.ilk  MVPEffectRect.ilk  Point.ilk  Project1.ilk  Rectangle.ilk  Texture.ilk  Texture2.ilk  image_texture.ilk  rectangle_color.ilk
dev/SOIL/projects/VC9/: UpgradeLog.XML  UpgradeLog.htm
dev/SOIL/projects/VC9/Debug/: SOIL.lastbuildstate
dev/SOIL/projects/VC9/x64/Debug/: vc110.idb
dev/glm/glm/: ALL_BUILD.vcxproj  Project.sdf  Project.sln  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dev/glm/glm/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate
gl/: links.txt
gl/anton/: CMakeLists.txt
gl/anton/animtriangle/: CMakeLists.txt  Source.cpp
gl/anton/basic/: Source.cpp
gl/anton/movetriangle/: CMakeLists.txt  Source.cpp
gl/anton/multipleVaos/: CMakeLists.txt  Source.cpp
gl/anton/multipleVbos/: CMakeLists.txt  Source.cpp
gl/anton/triangle/: CMakeLists.txt  Source.cpp
gl/anton/trianglestrip/: CMakeLists.txt  Source.cpp
gl/desktop_gl/: CMakeLists.txt  Project1.sln  README.txt
gl/desktop_gl/Common/: common.h
gl/desktop_gl/ImageRotate/: CMakeLists.txt  ImageRotate.cpp  ImageRotate.vcxproj  ImageRotate.vcxproj.filters
gl/desktop_gl/ImageRotate/x64/Debug/: vc110.idb
gl/desktop_gl/MVP/: CMakeFiles.txt  CMakeLists.txt  MVP.cpp  MVP.vcxproj.filters
gl/desktop_gl/MVPEffect/: CMakeFiles.txt  CMakeLists.txt  MVPEffect.cpp
gl/desktop_gl/MVPEffect/Debug/: MVPEffect.lastbuildstate  vc110.idb
gl/desktop_gl/MVPEffectRect/: CMakeLists.txt  MVPEffectRect.cpp  MVPEffectRect.vcxproj
gl/desktop_gl/MVPEffectRect/Debug/: vc110.idb
gl/desktop_gl/MVPEffectRect/x64/Debug/: MVPEffectRect.lastbuildstate
gl/desktop_gl/Project1/: CMakeLists.txt  main.cpp
gl/desktop_gl/Project1/Debug/: vc110.idb
gl/desktop_gl/Project2/: CMakeLists.txt  Project2.vcxproj  Source.cpp
gl/desktop_gl/Project2/Debug/: Point.lastbuildstate  vc110.idb
gl/desktop_gl/Project2/x64/Debug/: vc110.idb
gl/desktop_gl/Rectangle/: CMakeLists.txt  Rectangle.vcxproj  Source.cpp
gl/desktop_gl/Texture/: CMakeLists.txt  Texture.cpp  Texture.vcxproj.filters
gl/desktop_gl/Texture/x64/Debug/: vc110.idb
gl/desktop_gl/Texture2/: CMakeLists.txt  Source.cpp
gl/desktop_gl/basic/: CMakeLists.txt  Source.cpp
gl/desktop_gl/glm/: CMakeLists.txt  Source.cpp  glm.vcxproj
gl/desktop_gl/image_texture/: CMakeLists.txt  ImageTexture.cpp  image_texture.vcxproj.filters
gl/desktop_gl/rectangle_color/: CMakeLists.txt  Source.cpp  rectangle_color.vcxproj
gl/desktop_gl/rectangle_color/x64/Debug/: rectangle_color.lastbuildstate  vc110.idb
gl/desktop_gl/x64/Debug/: MVP.ilk  Point.ilk  Texture2.ilk
gl/dev/SOIL/projects/VC9/Debug/: SOIL.lib  vc110.idb
gl/dev/SOIL/projects/VC9/x64/Debug/: SOIL.lastbuildstate  SOIL.lib
gl/dev/glm/glm/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj
gl/dev/glm/glm/x64/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate
gl/gl_common/: CMakeLists.txt  README.md  Shader.cpp  Shader.h
gl/gl_es/: README.txt
meson/: .gitignore  Notes.txt  Notes_Sabor.txt
meson/avr/: build.sh  cross-file.txt  meson.build
meson/multiarchavr/: meson.build
meson/simple/: meson.build
meson/stm32f1/: meson.build
meson/stm32f1dir/: meson.build
meson/stm32f1dir/lib/: dummy.cpp  dummy.h  meson.build
meson/stm32f1dir/src/: blink.cpp
tizen/: gbs.conf
