cmake_minimum_required(VERSION 2.8)
project(myefl)
#find_package(elementary REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(ELEMENTARY REQUIRED elementary)
message("${ELEMENTARY_INCLUDE_DIRS}")
include_directories(${ELEMENTARY_INCLUDE_DIRS})
link_directories(${ELEMENTARY_LIBRARY_DIRS})
add_executable(myefl main.c)
target_link_libraries(myefl ${ELEMENTARY_LIBRARIES})
