cmake_minimum_required(VERSION 3.2)
project(myefl)
#find_package(elementary REQUIRED)
find_program(EDJE_CC_EXECUTABLE edje_cc)
if(NOT EDJE_CC_EXECUTABLE)
   message(FATAL_ERROR "edje_cc could not be found.")
endif()
if(EDJE_CC_EXECUTABLE)
   message(STATUS "edje_cc is found. :)")
endif()
find_package(PkgConfig REQUIRED)
pkg_check_modules(ELEMENTARY REQUIRED elementary)
#This is how we check for modules
pkg_check_modules(EVAS REQUIRED evas>=1.12)
#message(STATUS "${ELEMENTARY_INCLUDE_DIRS}")
include_directories(${ELEMENTARY_INCLUDE_DIRS})
#link_directories(${ELEMENTARY_LIBRARY_DIRS})
add_executable(myefl main.c)
target_link_libraries(myefl ${ELEMENTARY_LIBRARIES})
